# rlrsxp

./: .gitignore  CMakeLists.txt  README.md  main.c  test.rmi
inc/: resource.h
src/: resource.c
